package com.company;

public interface Roll {
    void rollDie();
}
